--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="container">
         <div class="first-row">
           <div class="first-column">
-            <h1><span>online</span> <span>educatuin</span></h1>
+            <h1><span>online</span> <span>educatuion</span></h1>
             <button type="button">contact us</button>
           </div>
           <div class="secound-column">
