--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <!-- Start Section About -->
     <div id="about" class="about">
       <div class="container">
-        <img src="img/2.svg" alt="" />
+        <img src="img/2.svg" alt="" draggable="false" />
         <div class="text-about">
           <p>why choose us?</p>
           <p>
@@ -100,8 +100,8 @@
       <h1 id="courses">our <span>courses</span></h1>
       <div class="container">
         <div class="items">
-          <div class="item">
-            <img src="img/3.svg" alt="" />
+          <div id="item-one" class="item">
+            <img src="img/3.svg" alt="" draggable="false" />
             <h3>engineering</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos
@@ -109,7 +109,7 @@
             </p>
           </div>
           <div class="item">
-            <img src="img/4.svg" alt="" />
+            <img src="img/4.svg" alt="" draggable="false" />
             <h3>web development</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos
@@ -117,7 +117,7 @@
             </p>
           </div>
           <div class="item">
-            <img src="img/5.svg" alt="" />
+            <img src="img/5.svg" alt="" draggable="false" />
             <h3>business</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos
@@ -125,7 +125,7 @@
             </p>
           </div>
           <div class="item">
-            <img src="img/6.svg" alt="" />
+            <img src="img/6.svg" alt="" draggable="false" />
             <h3>digital markiting</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos
@@ -133,7 +133,7 @@
             </p>
           </div>
           <div class="item">
-            <img src="img/7.svg" alt="" />
+            <img src="img/7.svg" alt="" draggable="false" />
             <h3>AI</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos
@@ -141,13 +141,17 @@
             </p>
           </div>
           <div class="item">
-            <img src="img/8.svg" alt="" />
+            <img src="img/8.svg" alt="" draggable="false" />
             <h3>cyber security</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos
               aspernatur eum ratione?
             </p>
           </div>
+        </div>
+        <div class="buttons">
+          <span id="pre"><i class="fa-solid fa-circle-arrow-left"></i></span>
+          <span id="next"><i class="fa-solid fa-circle-arrow-right"></i></span>
         </div>
       </div>
     </div>
